--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,20 +9,12 @@
 
 .description {
   display: inherit;
-  justify-content: inherit;
+  justify-content: center;
   align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+  font-size: 1rem;
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
 }
 
 .description p {
@@ -43,16 +35,15 @@
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
-  width: var(--max-width);
 }
 
-.card {
+/*.card {
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
-}
+}*/
 
 .card span {
   display: inline-block;
