--- a/src/app/header/header.module.css
+++ b/src/app/header/header.module.css
@@ -1,13 +1,10 @@
-.header {
+.container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
-    height: 100px;
-    margin: 2px 5px 2px 5px;
 }
 
-.menu {
+.header__menu {
     display: flex;
     flex-direction: row;
 }
