--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,8 @@
-
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   min-height: 100vh;
-  margin-top: 0.5rem;
+  padding: 0.5rem 1rem 0 1rem;
   background-color: #c9ada7;
 }
 
