--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,17 +3,21 @@
   flex-direction: column;
   min-height: 100vh;
   padding: 0.5rem 1rem 0 1rem;
-  background-color: #c9ada7;
+  background-color: #fcf7f7;
 }
 
-.content {
+.container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+    justify-content: space-between;
+    background-color: #ebe3d6;
+    margin-top: 80px;
+    padding-right: 200px;
 }
 
 .image {
-  border-radius: 10px;
   margin-bottom: 2rem;
+    padding: 30px 0  0 200px;
 }
 
 .description {
