--- a/src/components/buttons/button.module.css
+++ b/src/components/buttons/button.module.css
@@ -1,4 +1,8 @@
 .button {
-    width: 50px;
-    color: black;
+    text-align: center;
+    padding-top: 20px;
+    border-radius: 20px;
+    width: 150px;
+    height: 40px;
+    background-color: #968e79;
 }
